[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tools/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 50 )

[node name="Boss" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
color = Color( 0.341176, 0.0509804, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 100

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 2147483648

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
